<resources>
    <string name="app_name">mPlus</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="chat">Chat</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="offers">Offers</string>
    <string name="monthly_home_maintenancePackage">Monthly Home Maintenance Package     ></string>
    <string name="yearly_home_maintenancePackage">Yearly Home Maintenance Package</string>
    <string name="other_packages">Other Packages</string>
    <string name="home_maintenance_packages">Home Maintenance Packages</string>
    <string name="Simple_plansforhome">Simple plans for home</string>
    <string name="package_story">Our maintenance packages provide the most cost effective and convenient way to ensure your home is always in good working order.Whether you just need emergency cover or you want complete peace of mind,we have a package suited to you.What\'s more,you can bundle additional Home Services with your package and get a 5%
    discount if yopu pay annually up front.</string>
    <string name="one_off_serviceas">One-Off Services</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="customer_say">What our customer say</string>
    <string name="membership">Membership</string>
    <string name="rating">Customer Rating</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="yes">Yes</string>
    <string name="what_areuLookingfor">What are you looking for?</string>
    <string name="no">No</string>
    <string name="view_allpackages">View All Packages</string>
    <string name="menu_home">Home</string>
    <string name="cart">Cart</string>
    <string name="packages">Packages</string>
    <string name="one_off">One-Off</string>
    <string name="account">Account</string>
    <string name="home_maintenancepackages">Home Maintenance Packages </string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mr.">Mr.</string>
    <string name="want_exit">Do You Want to Exit ?</string>

    <string name="ms.">Ms.</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="email_address">Email Address*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password*</string>
    <string name="billing_address">Billing Address*</string>
    <string name="country">Country*</string>
    <string name="city">City*</string>
    <string name="find_us">How did you find us?*</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="proceed">Proceed</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_OTP">Enter the OTP</string>
    <string name="enter_fourDigitOTP">Please enter the 4-digit OTP sent to the</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgot_otp_message">Please provide your registered email address or mobile number to receive the OTP</string>
    <string name="terms_privacy_policy">By continuing you accept our <a href="Terms of Use">Terms of Use</a>&amp;<a href="Privacy Policy">Privacy Policy</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="search_for_services_and_packages">Search for services and packages</string>
    <string name="need_assistance_with_your_order">Need assistance with your order?</string>
    <string name="contact_our_24_7_customer_service">Contact our 24/7 Customer Service</string>
    <string name="live_chat">Live Chat</string>
    <string name="whatsapp">Whatsapp</string>
</resources>