<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/bottom_home"
        android:title="@string/menu_home" />
    <item
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:id="@+id/cart"
        android:title="@string/cart" />
    <item
        android:icon="@drawable/ic_baseline_backpack_24"
        android:id="@+id/packages"
        android:title="@string/packages" />
    <item
        android:icon="@drawable/ic_baseline_cleaning_services_24"
        android:id="@+id/one_off"
        android:title="@string/one_off" />
    <item
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:id="@+id/account"
        android:title="@string/account" />


</menu>