<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
         />
    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
      android:id="@+id/sign_inText"
        android:gravity="center"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/mobile_field"
        android:layout_below="@+id/sign_inText"
        android:layout_height="wrap_content">
        <EditText
            android:maxLength="10"
            android:inputType="phone"
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/email_address" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/mobile_field"
           android:id="@+id/password_field"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="5dp"
        android:textSize="18sp"
        android:onClick="signIn"
        android:layout_below="@+id/password_field"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@+id/sign_in"
        android:id="@+id/forget_password"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/terms_privacy_policy"
        android:layout_below="@+id/forget_password"
        android:text="@string/terms_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        />
    <LinearLayout
        android:layout_below="@+id/terms_privacy_policy"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/dont_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:onClick="register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>