<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragment.PackageFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ToolbarTheme"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:src="@drawable/splash_screenlogo"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_alignBottom="@+id/image"
                    android:id="@+id/tvDesc"
                    android:textStyle="bold"
                    android:text="@string/home_maintenance_packages"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal" />
            </RelativeLayout>
            <TextView
                android:textStyle="bold"
                android:text="@string/what_areuLookingfor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/monthly_home_maintenancePackage"
                android:text="@string/monthly_home_maintenancePackage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:background="@drawable/brown_edit_background"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:padding="10dp"
                android:id="@+id/yearly_home_maintenancePackage"
                android:text="@string/yearly_home_maintenancePackage"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/brown_edit_background"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:padding="10dp"

                android:id="@+id/other_packages"
                android:text="@string/other_packages"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:background="@drawable/brown_edit_background"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:textStyle="bold"
                android:text="@string/Simple_plansforhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:text="@string/package_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
            <View
                android:background="#d3d3d3"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/customer_say"
                android:textStyle="bold"
                android:text="@string/customer_say"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RatingBar
                    android:rating="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/rating_count"
                    android:textStyle="bold"
                    android:text="4.0/5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
            <TextView
                android:textStyle="bold"
                android:text="@string/home_maintenance_packages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/view_allpackages"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>