<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.OTPVerificationActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        />
    <TextView
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/enter_OTP"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/enter_fourDigitOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="18sp"
        android:id="@+id/mobile_number"
        android:text="@string/mobile_number"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"

        android:id="@+id/l2"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:itemBackground="@drawable/edit_background"
            app:pinWidth="40dp"
            app:pinHeight="40dp"
            app:pinLength="4"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            android:layout_marginTop="20dp"
            app:hint=""
            app:password="false"/>
        <!--        android:onClick="Verify"-->
        <LinearLayout
            android:layout_gravity="center"
             android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="5dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/count_downCounter"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button

            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="verify"
            android:textAllCaps="false"
            android:text="@string/verify"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>