<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ForgotPasswordActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        />
    <TextView
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/forgot_otp_message"
        android:layout_below="@+id/toolbar"
        android:text="@string/forgot_otp_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/forgot_otp_message"
        android:id="@+id/spinner_layout"
        android:background="@drawable/brown_edit_background"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    <Spinner
        android:id="@+id/email_mobile_spinner"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:visibility="gone"
        android:id="@+id/mobile_layout"
        android:layout_below="@+id/spinner_layout"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/mobile_number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:visibility="gone"
        android:id="@+id/email_layout"

        android:layout_below="@+id/mobile_layout"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:hint="@string/email_address" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="5dp"
        android:textSize="18sp"
        android:onClick="proceed"
        android:layout_below="@+id/mobile_layout"
        android:textColor="@color/colorWhite"
        android:text="@string/proceed"
        android:id="@+id/sign_in"
        android:background="@drawable/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>